foundation-objs/main/default/objects/Query_Storage__mdt/Query_Storage__mdt.object-meta.xml
<CustomObject>
    <label>Query Storage</label>
    <pluralLabel>Query Storage</pluralLabel>
</CustomObject>