foundation-objs/main/default/objects/Query_Storage__mdt/fields/Fields_Set_2__c.field-meta.xml
<CustomField>
    <fullName>Fields_Set_2__c</fullName>
    <label>Fields Set 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>