foundation-objs/main/default/objects/Query_Storage__mdt/fields/Object_Details__c.field-meta.xml
<CustomField>
    <fullName>Object_Details__c</fullName>
    <label>Object Details</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>